; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event.c_ub_event_add_bits.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_ub_event.c_ub_event_add_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_event = type { i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ub_event_add_bits(%struct.ub_event* %0, i16 signext %1) #0 {
  %3 = alloca %struct.ub_event*, align 8
  %4 = alloca i16, align 2
  store %struct.ub_event* %0, %struct.ub_event** %3, align 8
  store i16 %1, i16* %4, align 2
  %5 = load i16, i16* %4, align 2
  %6 = call i32 @NATIVE_BITS(i16 signext %5)
  %7 = load %struct.ub_event*, %struct.ub_event** %3, align 8
  %8 = call %struct.TYPE_2__* @AS_EVENT(%struct.ub_event* %7)
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %10, %6
  store i32 %11, i32* %9, align 4
  ret void
}

declare dso_local i32 @NATIVE_BITS(i16 signext) #1

declare dso_local %struct.TYPE_2__* @AS_EVENT(%struct.ub_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
